The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-03-18 DP  1.2.1 Include the hostname in the connect string for Kerberos support, per Magnus Hagander
    <li>2005-03-15 DP        Fix for non-SSL enabled libpq builds [Florian G. Pflug]
    <li>2005-03-15 HS        Mask the password on the main tab of the user properties dialogue
    <li>2005-03-13 AP        Change plain backup file default extension to .sql
    <li>2005-03-13 AP        Add CASCADE dropping
    <li>2005-03-04 DP  1.2.1 Fix aggregate SQL generation per James Prichard
    <li>2005-03-03 AP        graphical EXPLAIN
    <li>2005-03-03 AP        pgAgent fixes (jobId)
    <li>2005-03-02 DP        Rewritie pgAgent browser codee to use pgCollection
    <li>2005-02-25 AP        some more Slony-I stuff
    <li>2005-02-24 AP        some Slony-I stuff
    <li>2005-02-24 AP  1.2.1 require unicode to compile utffile.cpp
    <li>2005-02-23 AP        Slony-1 statistics
    <li>2005-02-14 AP  1.2.1 TreeSelChange fixes (menu/statistics/dependency refresh)
    <li>2005-02-14 AP        wx2.5.4 preparation
    <li>2005-02-13 AP        Slony admin node, join cluster using pg_dump
    <li>2005-02-13 AP  1.2.1 Make sure IsAlive check isn't affected by dead transactions
    <li>2005-02-13 AP  1.2.1 Fix missing schema prefix for casts
    <li>2005-02-11 AP        Slony-I support
    <li>2005-02-09 AP  1.2.1 fix trigger reengineering name quoting (r: Lucas Galfaso)
    <li>2005-02-07 AP  1.2.1 remove tablespace for sequences
    <li>2005-02-07 AHP 1.2.1 fix libpq/ssl library detection
    <li>2005-01-14 AP  1.2.1 table statistics including TOAST and indexes