@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-03-18 DP  1.2.1 Set column stats and comments correctly when creating tables.
     <li>2005-03-18 DP  1.2.1 Include the hostname in the connect string for Kerberos support, per Magnus Hagander
     <li>2005-03-15 DP        Fix for non-SSL enabled libpq builds [Florian G. Pflug]
     <li>2005-03-15 HS        Mask the password on the main tab of the user properties dialogue
